--- a/style.css
+++ b/style.css
@@ -16,11 +16,16 @@ a.NavButtons {
   text-decoration: none;
   font-size: 1.7vw;
   z-index: 2;
-  margin-top: 4%;
+  margin-top: 2vw;
   margin-left: 6.5%;
 }
 a.NavButtons:hover {
   color: rgb(216, 71, 25);
+}
+#TopBar, #TopBar * { transition: all 0.3s ease; }
+
+#TopBar.shrinked {
+  padding-bottom: 1.5vw;
 }
 a.gamecastLinks {
   font-family: MyriadProItalic;
