--- a/style.css
+++ b/style.css
@@ -53,7 +53,8 @@ a.gamecastLinks {
   width: 250vw;
   margin: 0;
   left: 0;
-  animation: 30s slidy infinite;
+  /*animation: 30s slidy infinite;*/
+  transition: transform 1s ease-in-out;
 }
 
 .TeamsSlider {
@@ -76,7 +77,17 @@ a.gamecastLinks {
   width: 371.97%;
   margin: 0;
   left: 0;
-  animation: 30s teamsSliderAnimation infinite;
+  /*animation: 30s teamsSliderAnimation infinite; */
+  transition: transform .2s ease-in-out;
+}
+.VenueSliderButton {
+  position: absolute;
+  z-index: 2;
+  height: 80%;
+  width: 10%;
+  background-size: cover;
+  border: none;
+
 }
 @keyframes teamsSliderAnimation {
   0% {
