--- a/style.css
+++ b/style.css
@@ -1,32 +1,31 @@
 @font-face {
   font-family: MyriadProBold;
-  src: url(MyriadPro-Bold.otf);
+  src: url(FONT/MyriadPro-Cond.otf);
 }
 
 @font-face {
   font-family: MyriadProItalic;
-  src: url(MyriadPro-CondIt.otf);
+  src: url(FONT/MyriadPro-CondIt.otf);
 }
 a.NavButtons {
   position: relative;
   float: left;
   color: black;
   font-family: MyriadProBold;
-  font-style: bold;
   text-decoration: none;
-  font-size: 1.7vw;
+  font-size: 1.9vw;
   z-index: 2;
   margin-top: 2vw;
-  margin-left: 6.5%;
+  margin-left: 7.8%;
 }
 a.NavButtons:hover {
   color: rgb(216, 71, 25);
 }
-#TopBar, #TopBar * { transition: all 0.3s ease; }
+/*#TopBar, #TopBar * { transition: all 0.3s ease; }
 
 #TopBar.shrinked {
   padding-bottom: 1.5vw;
-}
+}*/
 a.gamecastLinks {
   font-family: MyriadProItalic;
   font-size: 1vw;
@@ -41,157 +40,54 @@ a.gamecastLinks {
   left: 13.27%;
   top: 19.57vw;
 }
-
 .VenueSlider figure img {
   width: 50vw;
   height: 33.37vw;
   float: left;
 }
-
 .VenueSlider figure {
   position: relative;
   width: 250vw;
   margin: 0;
   left: 0;
-  /*animation: 30s slidy infinite;*/
-  transition: transform 1s ease-in-out;
-}
-
-.TeamsSlider {
-  overflow: hidden;
-  width: 82.66%;
-  height: 36vw;
-  position: absolute;
-  left: 17.3%;
-  top: 67.6vw;
-}
-
-.TeamsSlider figure img {
-  width: 39.8575vw;
-  height: 29.4338vw;
-  float: left;
-}
-
-.TeamsSlider figure {
-  position: relative;
-  width: 371.97%;
-  margin: 0;
-  left: 0;
-  /*animation: 30s teamsSliderAnimation infinite; */
-  transition: transform .2s ease-in-out;
+  transition: transform .5s ease-in-out;
 }
 .VenueSliderButton {
   position: absolute;
   z-index: 2;
-  height: 80%;
+  height: 30vw;
   width: 10%;
   background-size: cover;
   border: none;
+}
+.TeamsSlider {
+  overflow: hidden;
+  position: absolute;
+  left: 0;
+  top: 6.1867vw;
+  width: 61.5298vw;
+  height: 46.1567vw;
+}
+.TeamsSlider figure {
+  position: relative;
+  width: 900%;
+  height: 100%;
+  margin: 0;
+  left: 0;
+  transition: transform .5s ease-in-out;
+}
+.TeamsSlider figure img {
+  width: 61.5298vw;
+  height:100%;
+  float: left;
+}
+.TeamsSliderButton {
+  position: absolute;
+  background-size: auto;
+  border: none;
+  bottom: 10px;
+  height: 114px;
+  width: 61px;
+  z-index: 2;
 
-}
-@keyframes teamsSliderAnimation {
-  0% {
-    left: 0vw;
-  }
-  8% {
-    left: 0vw;
-  }
-  12% {
-    left: -82.66vw;
-  }
-  20% {
-    left: -82.66vw;
-  }
-  24% {
-    left: -165.32vw;
-  }
-  32% {
-    left: -165.32vw;
-  }
-  36% {
-    left: -247.98vw;
-  }
-  44% {
-    left: -247.98vw;
-  }
-  48% {
-    left: -330.64vw;
-  }
-  56% {
-    left: -330.64vw;
-  }
-  60% {
-    left: -247.98vw;
-  }
-  68% {
-    left: -247.98vw;
-  }
-  72% {
-    left: -165.32vw;
-  }
-  80% {
-    left: -165.32vw;
-  }
-  84% {
-    left: -82.66vw;
-  }
-  92% {
-    left: -82.66vw;
-  }
-  96% {
-    left: 0vw;
-  }
-}
-@keyframes slidy {
-  0% {
-    left: 0vw;
-  }
-  8% {
-    left: 0vw;
-  }
-  12% {
-    left: -50vw;
-  }
-  20% {
-    left: -50vw;
-  }
-  24% {
-    left: -100vw;
-  }
-  32% {
-    left: -100vw;
-  }
-  36% {
-    left: -150vw;
-  }
-  44% {
-    left: -150vw;
-  }
-  48% {
-    left: -200vw;
-  }
-  56% {
-    left: -200vw;
-  }
-  60% {
-    left: -150vw;
-  }
-  68% {
-    left: -150vw;
-  }
-  72% {
-    left: -100vw;
-  }
-  80% {
-    left: -100vw;
-  }
-  84% {
-    left: -50vw;
-  }
-  92% {
-    left: -50vw;
-  }
-  96% {
-    left: 0vw;
-  }
 }
