--- a/style.css
+++ b/style.css
@@ -7,7 +7,10 @@
   font-family: MyriadProItalic;
   src: url(FONT/MyriadPro-CondIt.otf);
 }
-
+@font-face {
+  font-family: MyriadProRegular;
+  src: url(FONT/MyriadPro-Cond.otf);
+}
 @font-face {
   font-family: captionFont;
   src: url(FONT/MyriadPro-CondIt.otf);
@@ -52,7 +55,7 @@ a.GamecastLinks {
 .WaiverSlideDown {
   overflow: hidden;
   position: absolute;
-  
+
 }
 .WaiverSlideDown figure {
   position: relative;
@@ -136,5 +139,13 @@ a.GamecastLinks {
 }
 
 .RegisterForm label {
-  font-family: HurmeRegular;
+  font-family: MyriadProRegular;
+  font-size: 1.5vw;
+  color: rgb(77, 77, 77);padding-right: 0.5vw;
+}
+
+.RegisterForm input {
+  border: 0;
+  font-family: MyriadProRegular;
+  font-size: 1.5vw;
 }
