--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ a.GamecastLinks {
   overflow: hidden;
   position: absolute;
   left: 0;
-  top: 6.1867vw;
+  top: 5.7vw;
   width: 61.5298vw;
   height: 46.1567vw;
 }
@@ -104,7 +104,7 @@ a.GamecastLinks {
 }
 .TeamsSlider figure img {
   width: 61.5298vw;
-  height:100%;
+  height: 100%;
   float: left;
 }
 .TeamsSliderButton {
@@ -156,8 +156,11 @@ a.GamecastLinks {
   font-size: 1.5vw;
 }
 
-input[type="radio"] {
+input[type='radio'] {
   -webkit-appearance: checkbox; /* Chrome, Safari, Opera */
   -moz-appearance: checkbox;    /* Firefox */
   -ms-appearance: checkbox;     /* not currently supported */
+}
+.radioCheckbox {
+  background-color: rgb(216, 71, 25);
 }
