--- a/style.css
+++ b/style.css
@@ -155,6 +155,7 @@ a.GamecastLinks {
   border: 0;
   font-family: MyriadProRegular;
   font-size: 1.5vw;
+  color: rgb(77, 77, 77);
 }
 .RegistrationButtons {
   background-color: rgb(0, 110, 140);
