--- a/style.css
+++ b/style.css
@@ -147,14 +147,14 @@ a.GamecastLinks {
 
 .RegisterForm label {
   font-family: MyriadProRegular;
-  font-size: 1.5vw;
+  /*font-size: 1.5vw;*/
   color: rgb(77, 77, 77);padding-right: 0.5vw;
 }
 
 .RegisterForm input {
   border: 0;
   font-family: MyriadProRegular;
-  font-size: 1.5vw;
+  /*font-size: 1.5vw;*/
   color: rgb(77, 77, 77);
 }
 .RegistrationButtons {
