--- a/style.css
+++ b/style.css
@@ -147,15 +147,15 @@ a.GamecastLinks {
 
 .RegisterForm label {
   font-family: MyriadProRegular;
-  /*font-size: 1.5vw;*/
+  font-size: 1.5vw;
   color: rgb(77, 77, 77);padding-right: 0.5vw;
+  font-size: 1.5vw;
 }
 
 .RegisterForm input {
   border: 0;
   font-family: MyriadProRegular;
-  /*font-size: 1.5vw;*/
-  color: rgb(77, 77, 77);
+  font-size: 1.5vw;
 }
 .RegistrationButtons {
   background-color: rgb(0, 110, 140);
