--- a/style.css
+++ b/style.css
@@ -156,6 +156,7 @@ a.GamecastLinks {
   border: 0;
   font-family: MyriadProRegular;
   font-size: 1.5vw;
+  color: rgb(77, 77, 77)
 }
 .RegistrationButtons {
   background-color: rgb(216, 71, 25);
